--- a/index.html
+++ b/index.html
@@ -3,97 +3,132 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nirvana ProGraphics | Portfolio</title>
-    <link rel="stylesheet" href="css/styles.css?v=1.1">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:700,400&display=swap" rel="stylesheet">
+    <title>Nirvana ProGraphics | Creative Design Studio</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="hero">
-        <img src="https://dummyimage.com/120x120/222/fff&text=Logo" alt="Nirvana ProGraphics Logo" class="logo">
-        <h1>Nirvana ProGraphics</h1>
-        <p class="tagline">Creative Branding & Digital Solutions</p>
-        <nav>
-            <ul>
+    <!-- Navigation -->
+    <nav class="navbar">
+        <div class="container">
+            <a href="#" class="logo">Nirvana ProGraphics</a>
+            <div class="nav-toggle" aria-label="Toggle Navigation">
+                <span></span><span></span><span></span>
+            </div>
+            <ul class="nav-links">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#services">Services</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#clients">Clients</a></li>
-                <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
-        </nav>
-        <div class="scroll-down"></div>
-    </header>
+        </div>
+    </nav>
 
-    <section id="portfolio" class="fade-in">
-        <h2>Our Work</h2>
-        <div class="portfolio-items">
-            <div class="portfolio-item">
-                <img src="https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=400&q=80" alt="Branding Sample">
-                <h3>Branding Project</h3>
-                <p>Complete branding for a modern business.</p>
-            </div>
-            <div class="portfolio-item">
-                <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=400&q=80" alt="Logo Design">
-                <h3>Logo Design</h3>
-                <p>Creative logo concepts for startups.</p>
-            </div>
-            <div class="portfolio-item">
-                <img src="https://images.unsplash.com/photo-1515378791036-0648a3ef77b2?auto=format&fit=crop&w=400&q=80" alt="Digital Marketing">
-                <h3>Digital Marketing</h3>
-                <p>Social media creatives & campaigns.</p>
+    <!-- Hero Section -->
+    <section id="home" class="hero">
+        <div class="container">
+            <div class="hero-content fade-in">
+                <h1>Transforming Ideas Into Visual Excellence</h1>
+                <p>Professional Branding & Digital Design Solutions</p>
+                <a href="#contact" class="cta-button">Get Started</a>
             </div>
         </div>
     </section>
 
-    <section id="clients" class="fade-in">
-        <h2>Our Clients</h2>
-        <div class="clients-logos">
-            <!-- Use your real logos here. For now, placeholder images. -->
-            <div class="client"><img src="https://dummyimage.com/80x80/eee/333&text=Namita" alt="Namita Interiors"></div>
-            <div class="client"><img src="https://dummyimage.com/80x80/eee/333&text=Con-air" alt="Con-air India"></div>
-            <div class="client"><img src="https://dummyimage.com/80x80/eee/333&text=Yaltron" alt="Yaltron Technocraft"></div>
-            <div class="client"><img src="https://dummyimage.com/80x80/eee/333&text=Pundu's" alt="Pundu's Salon"></div>
-            <div class="client"><img src="https://dummyimage.com/80x80/eee/333&text=Koriv" alt="Koriv Studio"></div>
-            <div class="client"><img src="https://dummyimage.com/80x80/eee/333&text=KJ" alt="KJ Group"></div>
-            <div class="client"><img src="https://dummyimage.com/80x80/eee/333&text=Aikyam" alt="Aikyam Tech Solutions"></div>
-            <div class="client"><img src="https://dummyimage.com/80x80/eee/333&text=Aligned" alt="Aligned Composites"></div>
-            <div class="client"><img src="https://dummyimage.com/80x80/eee/333&text=Beautex" alt="Beautex Makeup Studio"></div>
-            <div class="client"><img src="https://dummyimage.com/80x80/eee/333&text=Creativity" alt="Creativity Polycoats"></div>
-            <div class="client"><img src="https://dummyimage.com/80x80/eee/333&text=Devyani" alt="Devyani Arbat"></div>
-            <div class="client"><img src="https://dummyimage.com/80x80/eee/333&text=Era" alt="Era Infratech"></div>
-            <div class="client"><img src="https://dummyimage.com/80x80/eee/333&text=Krishna" alt="Krishna Homoeopathy"></div>
-            <div class="client"><img src="https://dummyimage.com/80x80/eee/333&text=Precigraph" alt="Precigraph Technologies"></div>
-            <div class="client"><img src="https://dummyimage.com/80x80/eee/333&text=Rivan" alt="Rivan Travels"></div>
-            <div class="client"><img src="https://dummyimage.com/80x80/eee/333&text=Synergy" alt="Synergy Fitness"></div>
-            <div class="client"><img src="https://dummyimage.com/80x80/eee/333&text=Vedira" alt="Vedira Solution"></div>
-        </div>
-    </section>
-
-    <section id="about" class="fade-in">
-        <h2>About Nirvana ProGraphics</h2>
-        <div class="about-content">
-            <img src="https://images.unsplash.com/photo-1519125323398-675f0ddb6308?auto=format&fit=crop&w=400&q=80" alt="Praveen Vidhate" class="about-img">
-            <div>
-                <p>Hello! I'm <strong>Praveen Vidhate</strong>, a passionate graphic designer with 5+ years of experience. At Nirvana ProGraphics, we specialize in creative branding, rebranding, digital marketing, and website design for businesses of all sizes.</p>
-                <p>We have worked with a diverse range of clients, delivering unique and impactful designs that help brands stand out. From logos to full branding solutions, digital marketing, and web design, we are your creative partners.</p>
+    <!-- Services Section -->
+    <section id="services" class="services">
+        <div class="container">
+            <h2 class="section-title">Our Services</h2>
+            <div class="services-grid">
+                <div class="service-card slide-up">
+                    <h3>Branding & Rebranding</h3>
+                    <p>Complete brand identity development and refinement</p>
+                </div>
+                <div class="service-card slide-up">
+                    <h3>Logo Design</h3>
+                    <p>Memorable and versatile logo solutions</p>
+                </div>
+                <div class="service-card slide-up">
+                    <h3>Website Design</h3>
+                    <p>Responsive and modern web experiences</p>
+                </div>
+                <div class="service-card slide-up">
+                    <h3>Digital Marketing</h3>
+                    <p>Strategic online presence and campaigns</p>
+                </div>
             </div>
         </div>
     </section>
 
-    <section id="contact" class="fade-in">
-        <h2>Contact Us</h2>
-        <form id="contact-form">
-            <input type="text" id="name" name="name" placeholder="Your Name" required>
-            <input type="email" id="email" name="email" placeholder="Your Email" required>
-            <textarea id="message" name="message" placeholder="Your Message" required></textarea>
-            <button type="submit">Send Message</button>
-            <div id="form-message"></div>
-        </form>
+    <!-- Portfolio Section -->
+    <section id="portfolio" class="portfolio">
+        <div class="container">
+            <h2 class="section-title">Featured Work</h2>
+            <div class="portfolio-grid">
+                <div class="portfolio-item hover-zoom">
+                    <img src="assets/images/portfolio-1.jpg" alt="Branding Project">
+                    <div class="portfolio-overlay">
+                        <h3>Brand Identity</h3>
+                        <p>Complete branding solution</p>
+                    </div>
+                </div>
+                <!-- Add more portfolio items as needed -->
+            </div>
+        </div>
     </section>
 
-    <footer>
-        <p>&copy; 2025 Nirvana ProGraphics. All rights reserved.</p>
+    <!-- Clients Section -->
+    <section id="clients" class="clients">
+        <div class="container">
+            <h2 class="section-title">Trusted By</h2>
+            <div class="clients-grid fade-in">
+                <!-- Client logos will be added here -->
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="contact">
+        <div class="container">
+            <h2 class="section-title">Get In Touch</h2>
+            <div class="contact-content">
+                <form id="contact-form" class="fade-in">
+                    <div class="form-group">
+                        <input type="text" id="name" name="name" required>
+                        <label for="name">Your Name</label>
+                    </div>
+                    <div class="form-group">
+                        <input type="email" id="email" name="email" required>
+                        <label for="email">Your Email</label>
+                    </div>
+                    <div class="form-group">
+                        <textarea id="message" name="message" required></textarea>
+                        <label for="message">Your Message</label>
+                    </div>
+                    <button type="submit" class="submit-btn">Send Message</button>
+                </form>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-content">
+                <div class="social-links">
+                    <a href="#" target="_blank" aria-label="Instagram">
+                        <img src="assets/icons/instagram.svg" alt="Instagram">
+                    </a>
+                    <a href="#" target="_blank" aria-label="LinkedIn">
+                        <img src="assets/icons/linkedin.svg" alt="LinkedIn">
+                    </a>
+                </div>
+                <p>&copy; 2025 Nirvana ProGraphics. All rights reserved.</p>
+            </div>
+        </div>
     </footer>
 
-    <script src="js/main.js?v=1.1"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
